--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Richmond London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438175-lead-ios-engineer-also-senior-to-mid-level-lifestyle-app-london'>Fulton Garrick Ltd Lead IOS Engineer - Also Senior to Mid Level - Lifestyle App - London | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438175-lead-ios-engineer-also-senior-to-mid-level-lifestyle-app-london'>Fulton Garrick Ltd Lead IOS Engineer - Also Senior to Mid Level - Lifestyle App - London | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London  London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4456211002'>Job Application for iOS Engineer - Warsaw at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4456211002'>Job Application for iOS Engineer - Warsaw at Glovo</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Toronto  Toronto  Toronto</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -161,7 +161,7 @@ paradigm?...</p>
 <p>6 days ago ... Experience working with push data (working with web sockets) and dynamic ?live 
 like? mobile applications. ? Experience with e-commerce applications in a?...</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/449059-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/449059-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -212,15 +212,15 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697451753-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697451753-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -364,7 +364,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
+<h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -372,7 +372,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://keywords-intl1.workable.com/j/8A1A540755'>Keywords Studios - Jobs: Mid-Level Software Engineer (Unreal and C++ Expertise) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/8A1A540755'>Keywords Studios - Jobs: Mid-Level Software Engineer (Unreal and C++ Expertise) - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -380,7 +380,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4471154002'>Job Application for iOS Engineer II at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4471154002'>Job Application for iOS Engineer II at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -399,7 +399,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Melbourne Melbourne</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999696787869-senior-ios-engineer'>Square Senior iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999696787869-senior-ios-engineer'>Square Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -407,7 +407,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -415,7 +415,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696532448-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696532448-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
